_scss/_converted.scss
/* ... */
.hero {
	height: 250px;
	//background-color: $primary_color;
	background-color: #092756;
	background-position: center center;
	background-size: cover;
	text-align: center;
	/* Set the background image to a gradient thing that is over-ridden if there is a cover image */
	/* TODO: Make this more fitting to my site colours and maybe randomise it a bit. */
	background-image: radial-gradient(ellipse farthest-corner at 0% 100%, rgba(104,128,138,0.4) 10%, rgba(138,114,76,0) 40%),linear-gradient(to bottom, rgba(57,173,219,0.25) 0%, rgba(42,60,87,0.4) 100%),linear-gradient(135deg, #670d10 0%, #092756 100%);
	h1 {
		background-color: $primary_color;
		display: inline-block;
		padding: 0 20px;
		line-height: 60px;
		margin-top: 90px;
		border-radius: 30px;
	}
}
.recent-posts {
	margin-bottom: 5rem;
	padding-left: 0;
	li {
		margin-bottom: 5px;
		list-style-type: none;
		div {
			padding: 5px 0;
		}
		.title {
			font-size: 1rem;
			padding: 0;
		}
		.date {
			float: right;
			font-size: 12px;
			text-transform: uppercase;
			color: $black_20;
			line-height: 24px;
		}
	}
}
@media(max-width: 57em) {
	.recent-posts li .date {
		display: none;
	}
}
.closing {
	margin: 4rem 0;
	font-size: 14px;
	color: $color_mountain_mist_approx;
	a {
		border-bottom: 0 !important;
	}
	.newer {
		float: right;
		text-align: right;
		strong {
			display: block;
			font-size: 12px;
			margin-right: -15px;
		}
	}
	.logo {
		clear: both;
		margin-top: 50px;
	}
	.older strong {
		display: block;
		font-size: 12px;
		margin-left: -15px;
	}
}
footer {
	margin-bottom: 2rem;
	font-family: $font_2, $font_3;
	font-weight: 400;
	.bio {
		color: $black_20;
		text-align: center;
		font-size: 12px;
		a {
			text-decoration: none;
		}
	}
}
@media(max-width: 43em) {
	footer {
		text-align: center;
		.bio {
			display: none;
		}
	}
}
#about-shipped {
	padding: 0;
	clear: both;
	list-style-type: none;
	font-size: 15px;
	h4 {
		margin: 0;
	}
	li {
		padding: 15px 0;
		clear: both;
	}
	p {
		margin: 0;
	}
}
html {
	font-size: 16px;
	font-family: $font_2, $font_3;
	line-height: 1.6;
  font-weight: 300;
}
@media(min-width: 38em) {
	#about-shipped {
		img {
			min-width: 250px !important;
			max-width: 250px !important;
			margin: 0 !important;
			//Instead of the line below you could use @includeborder-radius($radius, $vertical-radius)
			border-radius: 0 !important;
			float: right;
			padding-left: 10px;
		}
		li:nth-child(2n) img {
			float: left;
			padding: 5px 10px 0 0;
		}
	}
	html {
		font-size: 20px;
	}
}

h1 {
	@extend %extend_1;
}
h2 {
	@extend %extend_1;
}
h3 {
	@extend %extend_1;
}
h4 {
	@extend %extend_1;
}
h5 {
	@extend %extend_1;
}
h6 {
	@extend %extend_1;
}
b {
	@extend %extend_1;
	color: $color_log_cabin_approx;
}
strong {
	@extend %extend_1;
	font-weight: 400;
	color: $color_log_cabin_approx;
	em {
		font-family: $font_2, $font_3;
		font-style: italic;
	}
}
em, i {
	font-family: $font_2, $font_3;
	font-style: italic;
}
a {
	color: $primary_color;
}
@media(max-width: 50em) {
	header h1 {
		font-size: 5vw;
		&.compressed {
			font-size: 7vw;
			line-height: 7vw !important;
		}
	}
}
/* ... */

